--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,3 +53,10 @@ jobs:
       - store_artifacts:
           path: test-reports
           destination: test-reports
+
+
+
+          - run:
+          name: Deploy Master to Heroku
+          command: |
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
