--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,12 +51,12 @@ jobs:
             python manage.py test
 
       - store_artifacts:
-          path: test-reports
+         "path": test-reports
           destination: test-reports
 
 
 
-          - run:
+           run:
           name: Deploy Master to Heroku
           command: |
             git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
